# Controller/ClinicalController.go
@@ -14,6 +14,7 @@ type ClinicalController struct {
 // @Tags Clinical
 // @Accept json
 // @Produce json
+// @Security BearerAuth
 // @Param data body Request.ClinicalRegisterRequest true "Dados da nova Clinica"
 // @Success 201 {object} Response.ClinicalInfo
 // @Failure 400 {object} Response.ErrorResponse "Requisição inválida"
